week-5/day-2/yaml-practice/block-0/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: b0-svc
  name: b0-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: b0-deploy
  type: NodePort
